# JobPulse

./: .env.backup  .gitignore  .jira_config.example  AI_EXPERIENCE_LEVEL_ANALYSIS_IMPLEMENTATION.md  ARCHITECTURE_DECISIONS.md  ASSIGNMENT_CATEGORY_MAPPING.md  CATEGORIZED_BACKLOG_SUMMARY.md  CHANGELOG.md  CODE_TICKET_MAPPING_REPORT.md  CODE_TICKET_MAPPING_SUMMARY.md  COMPLETED_FEATURES_SUMMARY.md  CORPORATE_SPRINT_STRUCTURE.md  CORPORATE_SPRINT_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DETAILED_SPRINT_PLANNING.md  DOCUMENTATION_INDEX.md  DUPLICATE_REMOVAL_SUMMARY.md  Dockerfile  ENHANCED_SCRAPER_FEATURES.md  ENHANCED_SCRAPER_UPGRADE.md  ENVIRONMENT_COMPARISON.md  EXPERIENCE_LEVEL_FILTER_IMPLEMENTATION.md  FETCHHIRE_ARCHIVAL_PLAN.md  GREENHOUSE_REPAIR_SUMMARY.md  HEALTH_CHECK_SYSTEM.md  JIRA_IMPORT_GUIDE.md  JIRA_TICKETS.json  JIRA_TICKETS_CATEGORIZED.json  JIRA_TICKETS_FINAL_CATEGORIZED.json  JIRA_TICKETS_SIMPLIFIED.json  LEVER_REPAIR_SUMMARY.md  LOCAL_DEVELOPMENT.md  MIGRATION_AND_ARCHIVAL_SUMMARY.md  PLUGIN_ARCHITECTURE_SUMMARY.md  PORTFOLIO_SHOWCASE.md  PRODUCT_BACKLOG.md  PROXY_ROTATION_UPGRADE_SUMMARY.md  Procfile  Procfile.railway  (+81 more)
archive/fetchhire/source_code/: FETCHHIRE_BANNER.txt  FetchHire.py  GITHUB_CHECKLIST.md  GITHUB_SUMMARY.md  LICENSE  PROJECT_SUMMARY.md  README.md  README_ADVANCED.md  create_table.sql  debug_scraping.py  env.example  fast_scraped_jobs.json  proxies.txt  pyproject.toml  pyvenv.cfg  requirements.txt  requirements_advanced.txt  scraped_jobs.json  setup.sh  setup_advanced.sh  setup_database.py  setup_fetchhire.sh  test_flask_simple.py  working_test_results.json
archive/fetchhire/source_code/database/: __init__.py  snowflake_manager.py
archive/fetchhire/source_code/docs/: PLAYWRIGHT_SOLUTION_SUMMARY.md  (+1 more)
(+135 files in other folders)
